--- a/index.html
+++ b/index.html
@@ -4,21 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Day 4 Challange</title>
+    <title>Document</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <nav>
-        <div>
-            <img href="https://images.fineartamerica.com/images-medium-large-5/misty-twilight-timber-wolf-r-christopher-vest.jpg" src="https://images.fineartamerica.com/images-medium-large-5/misty-twilight-timber-wolf-r-christopher-vest.jpg" alt="WolfLogo">
+    <h1>Four Column Practice</h1>
+    <div class="row">
+        <div class="column" id="c1">
+            <h2>C1</h2>
+            <p>practice</p>
         </div>
-
-        <ul>
-            <li><a href="default.asp">Home</a></li>
-            <li><a href="news.asp">News</a></li>
-            <li><a href="contact.asp">Contact</a></li>
-            <li><a href="about.asp">About</a></li>
-         </ul>
-    </nav>
+        <div class="column" id="c2">
+            <h3>C2</h3>
+            <p>practice</p>
+        </div>
+        <div class="column" id="c3">
+            <h4>C3</h4>
+            <p>practice</p>
+        </div> 
+        <div class="column" id="c4">
+            <h5>C4</h5>
+            <p>practice</p>
+        </div>
+    </div>
+    
 </body>
 </html>
